log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: writer
          image: akiracry/log-output-writer:2.3
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
        - name: reader
          image: akiracry/log-output-reader:2.5
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
            - name: config-volume
              mountPath: /config
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-pvc
        - name: config-volume
          configMap:
            name: log-output-config
