log_output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output
  namespace: exercises
spec:
  parentRefs:
    - name: exercises-gateway
      namespace: exercises
  hostnames:
    - "log-output.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output
          port: 3000
